# cmakeExample

./: CMakeLists.txt
src/: main.cpp
